[package]
name = "vane"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy.git" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy.git" }
bevy_render = { git = "https://github.com/bevyengine/bevy.git" }
tracing = "0.1.41"
bevy_vector_field = { path = "../bevy_vector_field" }
